docs-site/versioned_docs/version-0.1.0/modeling/capabilities.md
---
sidebar_position: 1
title: Capabilities
---

# Capabilities — the building blocks

**Why.** Capabilities are the major things your business does — its "blocks of work". They are found
first because everything else in the model hangs off them.

**How.** Click **Generate with LLM**. A map of boxes appears, joined by "depends on" lines. Click any box
to read or edit it in the side panel; use **+ Capability** to add one. **Enrich** suggests blocks a
typical business in your industry usually has that yours is missing — you keep only the ones that fit.

> **Example.** For a solar installer you get boxes like Lead Management, Solution Design, Procurement,
> Installation, and Billing.

Capabilities is the one **review-only** layer: because everything downstream is derived from it,
regenerating it would reset the layers below. You refine capabilities by editing them directly.
